--- a/i2037-client/app/partials/grapes.html
+++ b/i2037-client/app/partials/grapes.html
@@ -1,23 +1,27 @@
-<div class="col-md-2">
-  <ul class="nav nav-pills nav-stacked">
-    <li><a href="#/cellar/wines">Wines</a></li>
-    <li class="active"><a href="#/cellar/grapes">Grapes</a></li>
-  </ul>
-</div>
-<div class="col-md-10">
+<div class="col-md-12">
   <div class="page-header">
     <h2>Grapes</h2>
   </div>
-	<table class="table table-striped table-bordered">
-		<thead>
-			<th>GrapeId</th>
-			<th>Name</th>
-		</thead>
-		<tbody>
-			<tr ng-repeat="grape in grapes">
-				<td>{{grape.grapeId}}</td>
-				<td>{{grape.name}}</td>
-			</tr>		
-		</tbody>
-	</table>
+  <div class="row">
+    <div class="col-md-2">
+      <div class="list-group">
+        <a class="list-group-item" href="#/cellar/wines">Wines</a>
+        <a class="active list-group-item" href="#/cellar/grapes">Grapes</a>
+      </div>
+    </div>
+    <div class="col-md-10">
+    	<table class="table table-striped table-bordered">
+    		<thead>
+    			<th>GrapeId</th>
+    			<th>Name</th>
+    		</thead>
+    		<tbody>
+    			<tr ng-repeat="grape in grapes">
+    				<td>{{grape.grapeId}}</td>
+    				<td>{{grape.name}}</td>
+    			</tr>		
+    		</tbody>
+    	</table>
+    </div>
+  </div>
 </div>
