fixed the list group navs

--- a/i2037-client/app/partials/recipes.html
+++ b/i2037-client/app/partials/recipes.html
@@ -1,16 +1,16 @@
-<div class="col-md-2">
-  <ul class="nav nav-pills nav-stacked">
-    <li><a href="#butternut">Butternut Squash</a></li>
-    <li><a href="#chickpeas">Chick Peas</a></li>
-    <li><a href="#peaham">Pea &amp; Ham Soup</a></li>            
-    <li><a href="#chops">Pork Chops</a></li>
-    <li><a href="#chilli">Quick Chilli</a></li>
-    <li><a href="#ragu">Rapid Ragu</a></li>      
-    <li><a href="#salmon">Mirrin Salmon</a></li>      
-    <li><a href="#scallops">Scallops</a></li>
-  </ul>
+<div class="col-md-3">
+  <div class="list-group">
+    <a class="list-group-item" href="#butternut">Butternut Squash</a>
+    <a class="list-group-item" href="#chickpeas">Chick Peas</a>
+    <a class="list-group-item" href="#peaham">Pea &amp; Ham Soup</a>            
+    <a class="list-group-item" href="#chops">Pork Chops</a>
+    <a class="list-group-item" href="#chilli">Quick Chilli</a>
+    <a class="list-group-item" href="#ragu">Rapid Ragu</a>      
+    <a class="list-group-item" href="#salmon">Mirrin Salmon</a>      
+    <a class="list-group-item" href="#scallops">Scallops</a>
+  </div>
 </div>
-<div class="col-md-10">
+<div class="col-md-9">
   <section id="recipes">
     <div class="page-header"><h2>Recipes</h2></div>
     <h3 id="butternut">Butternut Squash and Ginger Soup</h3>
