--- a/i2037-client/app/partials/wineview.html
+++ b/i2037-client/app/partials/wineview.html
@@ -4,10 +4,10 @@
   </div>
   <div class="row">
     <div class="col-md-2">
-      <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="#/cellar/wines">Wines</a></li>
-        <li><a href="#/cellar/grapes">Grapes</a></li>
-      </ul>
+      <div class="list-group">
+        <a class="active list-group-item" href="#/cellar/wines">Wines</a>
+        <a class="list-group-item" href="#/cellar/grapes">Grapes</a>
+      </div>
     </div>
     <div class="col-md-10">
       <div class="row">
