cleaned up css styles

--- a/i2037-client/app/partials/wineview.html
+++ b/i2037-client/app/partials/wineview.html
@@ -36,7 +36,7 @@
           <li ng-class="wineCls" ng-repeat="wine in row">
             <div class="thumbnail media">
               <a href="#" class="pull-left">
-                <img src="img/wine_thumbnail.jpg" class="media-object wine-thumbnail">
+                <img src="img/wine_thumbnail.jpg" class="media-object i2-wine-thumbnail">
               </a>
               <div class="media-body">
                 <a href="#/cellar/wines/{{wine.wineId}}"><h4 class="media-heading">{{wine.name}} ({{wine.vintage}})</h4></a>
