moved page header to the top of recipes

--- a/i2037-client/app/partials/recipes.html
+++ b/i2037-client/app/partials/recipes.html
@@ -1,103 +1,106 @@
-<div class="col-md-3">
-  <div class="list-group">
-    <a class="list-group-item" href="#butternut">Butternut Squash</a>
-    <a class="list-group-item" href="#chickpeas">Chick Peas</a>
-    <a class="list-group-item" href="#peaham">Pea &amp; Ham Soup</a>            
-    <a class="list-group-item" href="#chops">Pork Chops</a>
-    <a class="list-group-item" href="#chilli">Quick Chilli</a>
-    <a class="list-group-item" href="#ragu">Rapid Ragu</a>      
-    <a class="list-group-item" href="#salmon">Mirrin Salmon</a>      
-    <a class="list-group-item" href="#scallops">Scallops</a>
+<div class="col-md-12">
+  <div class="page-header">
+    <h2>Recipes</h2>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="list-group">
+        <a class="list-group-item" href="#butternut">Butternut Squash</a>
+        <a class="list-group-item" href="#chickpeas">Chick Peas</a>
+        <a class="list-group-item" href="#peaham">Pea &amp; Ham Soup</a>            
+        <a class="list-group-item" href="#chops">Pork Chops</a>
+        <a class="list-group-item" href="#chilli">Quick Chilli</a>
+        <a class="list-group-item" href="#ragu">Rapid Ragu</a>      
+        <a class="list-group-item" href="#salmon">Mirrin Salmon</a>      
+        <a class="list-group-item" href="#scallops">Scallops</a>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <section id="recipes">
+        <h3 id="butternut">Butternut Squash and Ginger Soup</h3>
+        <ul>
+          <li>1 medium onion</li>
+          <li>3 cloves of garlic</li>
+          <li>700g butternut squash</li>
+          <li>2 tsp fresh grated root ginger juice</li>
+          <li>900ml / 1 1/2 pints vegetable stock</li>
+          <li>Pinch grated nutmeg</li>
+          <li>100ml Single cream</li>
+        </ul>
+
+        <h3 id="chilli">Quick Chilli</h3>
+        <ul>
+          <li>150g chorizo sausage</li>
+          <li>500g minced beef</li>
+          <li>1/2 teaspoon ground cumin</li>
+          <li>1/2 teaspoon ground coriander</li>
+          <li>1/2 teaspoon ground cinnamon</li>
+          <li>500g jar tomato and chunky vegetables sauce</li>
+          <li>390g can mixed spicy beans</li>
+          <li>60ml sweet chilli sauce</li>
+          <li>1/4 teaspoon chilli flakes (optional)</li>
+       </ul>
+
+       <h3 id="salmon">Mirin-Glazed Salmon</h3>
+        <ul>
+            <li>60ml mirin</li>
+            <li>50g light brown sugar</li>
+            <li>60ml soy sauce</li>
+            <li>4x125g thick pieces of salmon</li>
+            <li>2 x 15ml tablespoons rice vinegar</li>
+            <li>1-2 spring onions</li>
+       </ul>
+
+        <h3 id="chops">Pork Chops</h3>
+        <ul>
+          <li>2 pork chops</li>
+          <li>2 teaspoons garlic oil</li>
+          <li>125ml cider</li>
+          <li>75ml double cream</li>
+          <li>15ml grainy mustard</li>
+       </ul>
+
+        <h3 id="scallops">Scallops and Chorizo</h3>
+        <ul>
+          <li>110g chorizo sausage</li>
+          <li>400g small scallops</li>
+          <li>1/2 lemon</li>
+          <li>Fresh parsley</li>
+       </ul>
+
+        <h3 id="chickpeas">Chickpeas with Rocket and Sherry</h3>
+        <ul>
+          <li>15ml wok oil</li>
+          <li>2 x teaspoons cumin seeds</li>
+          <li>2 x 410g cans chickpeas</li>
+          <li>130g packet roquette salad</li>
+          <li>1 teaspoon Maldon salt</li>
+          <li>60ml cream sherry</li>
+       </ul>
+
+        <h3 id="peaham">Pea and Ham Soup</h3>
+        <ul>
+          <li>1/2 onion</li>
+          <li>50g gammon</li>
+          <li>1/2 leek (white part)</li>
+          <li>200g peas</li>
+          <li>300ml chicken stock</li>
+          <li>2 tbsp double cream</li>
+       </ul>
+
+       <h3 id="ragu">Rapid Ragu</h3>
+       <ul>
+          <li>2 x 15ml tablespoons garlic oil</li>
+          <li>125g cubed pancetta</li>
+          <li>500g lamb mince</li>
+          <li>75g caramelized onions</li>
+          <li>80ml Marsala</li>
+          <li>400g can chopped tomatoes</li>
+          <li>75g green lentils</li>
+          <li>125 ml water</li>
+          <li>50g grated cheese</li>
+       </ul>
+      </section>
+    </div>
   </div>
 </div>
-<div class="col-md-9">
-  <section id="recipes">
-    <div class="page-header"><h2>Recipes</h2></div>
-    <h3 id="butternut">Butternut Squash and Ginger Soup</h3>
-    <ul>
-      <li>1 medium onion</li>
-      <li>3 cloves of garlic</li>
-      <li>700g butternut squash</li>
-      <li>2 tsp fresh grated root ginger juice</li>
-      <li>900ml / 1 1/2 pints vegetable stock</li>
-      <li>Pinch grated nutmeg</li>
-      <li>100ml Single cream</li>
-    </ul>
-
-    <h3 id="chilli">Quick Chilli</h3>
-    <ul>
-      <li>150g chorizo sausage</li>
-      <li>500g minced beef</li>
-      <li>1/2 teaspoon ground cumin</li>
-      <li>1/2 teaspoon ground coriander</li>
-      <li>1/2 teaspoon ground cinnamon</li>
-      <li>500g jar tomato and chunky vegetables sauce</li>
-      <li>390g can mixed spicy beans</li>
-      <li>60ml sweet chilli sauce</li>
-      <li>1/4 teaspoon chilli flakes (optional)</li>
-   </ul>
-
-   <h3 id="salmon">Mirin-Glazed Salmon</h3>
-    <ul>
-        <li>60ml mirin</li>
-        <li>50g light brown sugar</li>
-        <li>60ml soy sauce</li>
-        <li>4x125g thick pieces of salmon</li>
-        <li>2 x 15ml tablespoons rice vinegar</li>
-        <li>1-2 spring onions</li>
-   </ul>
-
-    <h3 id="chops">Pork Chops</h3>
-    <ul>
-      <li>2 pork chops</li>
-      <li>2 teaspoons garlic oil</li>
-      <li>125ml cider</li>
-      <li>75ml double cream</li>
-      <li>15ml grainy mustard</li>
-   </ul>
-
-    <h3 id="scallops">Scallops and Chorizo</h3>
-    <ul>
-      <li>110g chorizo sausage</li>
-      <li>400g small scallops</li>
-      <li>1/2 lemon</li>
-      <li>Fresh parsley</li>
-   </ul>
-
-    <h3 id="chickpeas">Chickpeas with Rocket and Sherry</h3>
-    <ul>
-      <li>15ml wok oil</li>
-      <li>2 x teaspoons cumin seeds</li>
-      <li>2 x 410g cans chickpeas</li>
-      <li>130g packet roquette salad</li>
-      <li>1 teaspoon Maldon salt</li>
-      <li>60ml cream sherry</li>
-   </ul>
-
-    <h3 id="peaham">Pea and Ham Soup</h3>
-    <ul>
-      <li>1/2 onion</li>
-      <li>50g gammon</li>
-      <li>1/2 leek (white part)</li>
-      <li>200g peas</li>
-      <li>300ml chicken stock</li>
-      <li>2 tbsp double cream</li>
-   </ul>
-
-   <h3 id="ragu">Rapid Ragu</h3>
-    <ul>
-      <li>2 x 15ml tablespoons garlic oil</li>
-      <li>125g cubed pancetta</li>
-      <li>500g lamb mince</li>
-      <li>75g caramelized onions</li>
-      <li>80ml Marsala</li>
-      <li>400g can chopped tomatoes</li>
-      <li>75g green lentils</li>
-      <li>125 ml water</li>
-      <li>50g grated cheese</li>
-   </ul>
-
-  </div>
-
-  </section>
-</div><!--/span-->
