--- a/i2037-client/app/css/app.css
+++ b/i2037-client/app/css/app.css
@@ -1,5 +1,9 @@
 /* app css stylesheet */
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 .i2-wine-thumbnail {
   height: 10.3em;
   width: 3em;
