removed angular-bootstrap hack

--- a/i2037-client/app/css/app.css
+++ b/i2037-client/app/css/app.css
@@ -4,6 +4,9 @@
   display: none !important;
 }
 
+/* angular-bootstrap */
+.nav, .pagination, .carousel a { cursor: pointer; }
+
 .i2-wine-thumbnail {
   height: 10.3em;
   width: 3em;
