Removed comment from cage

--- a/i2037-client/app/partials/cage.html
+++ b/i2037-client/app/partials/cage.html
@@ -1,43 +1,4 @@
-<div class="span12">
-    <table class="table">
-    <tbody>
-      <tr>
-        <td colspan="2"><h4>Wednesday 23 October</h4></td>
-      </tr>
-      <tr>
-        <td>13:46</td><td>London Waterloo Railway Station (WAT)</td>
-      </tr>
-      <tr>
-        <td>13:46</td><td>Flat</td>
-      </tr>
-      <tr>
-        <td colspan="2"><h4>Thursday 24 October</h4></td>
-      </tr>
-      <tr>
-        <td>13:46</td>
-        <td>
-            <div>
-              <a>25Hours Hotel</a>  
-              <div>
-                  <div class="well">
-                    <address>Lerchenfelder Strasse 1-3, Wien, Wien, Austria</address>
-                  </div>
-                  <ul class="media-list">
-                      <li ng-controller="CommentTestCtrl">
-                        <div i2-comment="comment"></div>
-                        <button ng-click="newComment()">New</button>                        
-                      </li>
-                  </ul>
-              </div>
-            </div>
-        </td>
-      </tr>
-      <tr>
-        <td>13:46</td><td>London Waterloo Railway Station (WAT)</td>
-      </tr>                        
-    </tbody>
-  </table>
-
+<div class="col-md-12" ng-controller="CageCalendarCtrl">
 	<div id="graph" style="height:500px"></div>
 	<div id="myGrid" style="width:500px;height:400px;"></div>
 </div>
