--- a/i2037-client/app/partials/cage.html
+++ b/i2037-client/app/partials/cage.html
@@ -1,4 +1,5 @@
 <div class="col-md-12">
+  <pre>{{days | json}}</pre>
 	<div id="graph" style="height:500px"></div>
 	<div id="myGrid" style="width:500px;height:400px;"></div>
 </div>
