--- a/i2037-client/app/partials/cage.html
+++ b/i2037-client/app/partials/cage.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <pre>{{days | json}}</pre>
-  <div style="width:100%;height:100%" i2-pie data="[10,20]"></div>
+  <div style="width:100%;height:100%" i2-pie data="[10,20]" inner-radius-ratio="0.5"></div>
 	<div id="graph" style="height:500px"></div>
 	<div id="myGrid" style="width:500px;height:400px;"></div>
 </div>
