Added a title to the pie chart

--- a/i2037-client/app/partials/cage.html
+++ b/i2037-client/app/partials/cage.html
@@ -4,7 +4,8 @@
     data="activities" 
     inner-radius-ratio="0.6"
     value-field="distance"
-    label-field="group"></div>
+    label-field="group"
+    title="distance"></div>
 	<div id="graph" style="height:500px"></div>
 	<div id="myGrid" style="width:500px;height:400px;"></div>
 </div>
