--- a/i2037-client/app/partials/home.html
+++ b/i2037-client/app/partials/home.html
@@ -1,6 +1,6 @@
-<div class="jumbotron">
+<div class="jumbotron i2-jumbotron">
   <h1>i2037</h1>
-  <p>Personal web application portal. Version: <span i2-app-version></span></p>
+  <p>Laboratory</p>
 </div>
 <div class="col-md-4">
   <h2>Recipes</h2>
