--- a/i2037-client/app/partials/cage.html
+++ b/i2037-client/app/partials/cage.html
@@ -1,4 +1,7 @@
 <div class="col-md-12">
+
+  <i2-quote-panel ng-controller="FusionPanelCtrl" quote="quote"></i2-quote-panel>
+
   <pre>{{days | json}}</pre>
   <div style="width:100%;height:100%" i2-pie 
     data="activities" 
