--- a/i2037-client/app/css/app.css
+++ b/i2037-client/app/css/app.css
@@ -244,7 +244,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', end
 
 .x-wing tr {
   border-top: 2px none #2B2B32;
-  border-bottom: 2px groove #2B2B32;
 }
 
 .x-wing-right table,.x-wing-left table {
@@ -288,6 +287,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', end
 
 .x-ob-highlight {
   background: #1F5C99; 
+}
+
+.x-ob-level {
+  border-bottom: 2px groove #2B2B32;  
+}
+
+.x-ob-normamt-level {
+  border-bottom: 2px solid gray;
 }
 
 .x-price-normal-amt {
