--- a/i2037-client/app/css/app.css
+++ b/i2037-client/app/css/app.css
@@ -48,6 +48,10 @@
   width: 2em;
 }
 
+.x-popover {
+  color: black;
+}
+
 .x-quote-panel {
   background-color: rgb(24,31,36);
   height: 200px;
@@ -284,6 +288,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', end
   text-align: center;
   padding-top: 3px;
   padding-bottom: 3px;
+}
+
+.x-ob {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; 
+  cursor: pointer;
 }
 
 .x-ob-highlight {
