added a test page

--- a/i2037-mobile/www/templates/menu.html
+++ b/i2037-mobile/www/templates/menu.html
@@ -24,6 +24,9 @@
         <ion-item menu-close href="#/app/journal">
           Journal
         </ion-item>
+        <ion-item menu-close href="#/app/test">
+          Test
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
