--- a/i2037-client/app/css/app.css
+++ b/i2037-client/app/css/app.css
@@ -24,8 +24,6 @@
   color: #999;
 }
 
-.nav-bar
-
 .i2-wine-thumbnail {
   height: 10.3em;
   width: 3em;
@@ -268,10 +266,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', end
   table-layout: fixed;
 }
 
-.x-wing-left td:nth-of-type(1) {
+.x-depth-chart {
   text-align: center;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  height: 20px;
+  width: 100%;
 }
 
 .x-wing-left td:nth-of-type(2) {
@@ -294,12 +292,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', end
 .x-wing-right td:nth-of-type(2) {
   width: 2em;
   text-align: left;
-}
-
-.x-wing-right td:nth-of-type(3) {
-  text-align: center;
-  padding-top: 3px;
-  padding-bottom: 3px;
 }
 
 .x-ob {
