--- a/i2037-client/app/js/admin/templates/admin-signupform.tpl.html
+++ b/i2037-client/app/js/admin/templates/admin-signupform.tpl.html
@@ -1,53 +1,64 @@
 <div class="col-md-12">
   <div class="page-header">
-    <h3>{{title}}</h3>
+    <h3>{{vm.title}}</h3>
   </div>
   <form name="signUpForm" class="form-horizontal" novalidate>
-    <div class="form-group" ng-class="getCls(signUpForm.userName)">
+    <div class="form-group" ng-class="vm.getCls(signUpForm.userName)">
       <label class="control-label col-md-4" for="inputUsername">Email</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-        <input type="email" class="form-control" id="inputUsername" name="userName" placeholder="Email address" ng-model="userPM.userName" 
-          ng-readonly="!isNewUser">
+        <input type="email" class="form-control" id="inputUsername" name="userName" placeholder="Email address"
+               ng-model="vm.userPM.userName"
+               ng-readonly="!vm.isNewUser">
       </div>
-      <p class="help-block col-md-offset-4" ng-show="showErr(signUpForm.userName, 'email')">Username must be an email address</p>
-      <p class="help-block col-md-offset-4" ng-show="showErr(signUpForm.userName, 'required')">Username is required</p>                                    
-    </div>    
-    <div class="form-group" ng-class="getCls(signUpForm.foreName)">
+      <p class="help-block col-md-offset-4" ng-show="vm.showErr(signUpForm.userName, 'email')">Username must be an email
+        address</p>
+      <p class="help-block col-md-offset-4" ng-show="vm.showErr(signUpForm.userName, 'required')">Username is
+        required</p>
+    </div>
+    <div class="form-group" ng-class="vm.getCls(signUpForm.foreName)">
       <label class="control-label col-md-4" for="inputForename">First Name</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-        <input type="text" class="form-control" id="inputForename" name="foreName" placeholder="First Name" ng-model="userPM.foreName" required>
+        <input type="text" class="form-control" id="inputForename" name="foreName" placeholder="First Name"
+               ng-model="vm.userPM.foreName" required>
       </div>              
     </div>
-    <div class="form-group" ng-class="getCls(signUpForm.lastName)">
+    <div class="form-group" ng-class="vm.getCls(signUpForm.lastName)">
       <label class="control-label col-md-4" for="inputLastname">Last Name</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-        <input type="text" class="form-control" id="inputLastname" name="lastName" placeholder="Last Name" ng-model="userPM.lastName" required>
+        <input type="text" class="form-control" id="inputLastname" name="lastName" placeholder="Last Name"
+               ng-model="vm.userPM.lastName" required>
       </div>              
-    </div>            
-    <div class="form-group" ng-class="getCls(signUpForm.password)">
+    </div>
+    <div class="form-group" ng-class="vm.getCls(signUpForm.password)">
       <label class="control-label col-md-4" for="inputPassword">Password</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" ng-model="userPM.password" 
-          ng-minlength="6" required>
+        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password"
+               ng-model="vm.userPM.password"
+               ng-minlength="6" required>
       </div>
-      <p class="help-block col-md-offset-4" ng-show="showErr(signUpForm.password, 'minlength')">Password must have at least 6 chars</p>                                             
+      <p class="help-block col-md-offset-4" ng-show="vm.showErr(signUpForm.password, 'minlength')">Password must have at
+        least 6 chars</p>
     </div>
-    <div class="form-group" ng-class="getCls(signUpForm.password2)">
+    <div class="form-group" ng-class="vm.getCls(signUpForm.password2)">
       <label class="control-label col-md-4" for="inputPassword2">Confirm Password</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-        <input type="password" class="form-control" id="inputPassword2" name="password2" placeholder="Password" ng-model="temp.password2" required>
+        <input type="password" class="form-control" id="inputPassword2" name="password2" placeholder="Password"
+               ng-model="vm.password2" required>
       </div>
-      <p class="help-block col-md-offset-4" ng-show="signUpForm.$dirty &amp;&amp; !passwordsMatch()">Passswords do not match</p>              
+      <p class="help-block col-md-offset-4" ng-show="signUpForm.$dirty &amp;&amp; !vm.passwordsMatch()">Passswords do
+        not match</p>
     </div>    
     <div class="form-group">
       <div class="col-md-offset-4 col-md-4">
-        <button ng-click="submit()" class="btn btn-primary" ng-disabled="signUpForm.$invalid || !passwordsMatch()">{{title}}</button>
-        <button ng-click="cancel()" class="btn">Cancel</button>  
+        <button ng-click="vm.submit()" class="btn btn-primary"
+                ng-disabled="signUpForm.$invalid || !vm.passwordsMatch()">{{vm.title}}
+        </button>
+        <button ng-click="vm.cancel()" class="btn">Cancel</button>
       </div>
     </div>
   </form>
