--- a/i2037-client/app/js/admin/templates/LoginForm.tpl.html
+++ b/i2037-client/app/js/admin/templates/LoginForm.tpl.html
@@ -3,21 +3,21 @@
     <h3>Login</h3>
   </div>
   <form class="form-horizontal" role="form" (ngSubmit)="submit()" #login="ngForm">
-    <div class="form-group" [ngClass]="getCls(login.controls.username)">
+    <div class="form-group" [ngClass]="getCls(username.control)">
       <label class="control-label col-md-3" for="inputUsername">Email</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-        <input type="email" class="form-control" id="inputUsername" ngControl="username" #username="ngForm"
+        <input type="email" class="form-control" id="inputUsername" name="username" #username="ngModel"
                placeholder="Username"
                [(ngModel)]="userPM.userName" required>
       </div>
       <p class="help-block col-md-offset-3" *ngIf="hasErr(username.control, 'required')">Username is required</p>
     </div>
-    <div class="form-group" [ngClass]="getCls(login.controls.password)">
+    <div class="form-group" [ngClass]="getCls(password.control)">
       <label class="control-label col-md-3" for="inputPassword">Password</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-        <input type="password" class="form-control" id="inputPassword" ngControl="password" #password="ngForm"
+        <input type="password" class="form-control" id="inputPassword" name="password" #password="ngModel"
                placeholder="Password"
                [(ngModel)]="userPM.password" required>
       </div>
@@ -27,7 +27,7 @@
       <div class="col-md-offset-3 col-md-4">
         <div class="checkbox">
           <label for="inputRememberMe">
-            <input type="checkbox" id="inputRememberMe" ngControl="rememberMe" [(ngModel)]="userPM.rememberMe"> Remember
+            <input type="checkbox" id="inputRememberMe" name="rememberMe" [(ngModel)]="userPM.rememberMe"> Remember
             me
           </label>        
         </div>
